...
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_login"
            android:background="@color/colorBg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/login"
...
